Closed Bug 1951956 Opened 11 months ago Closed 11 months ago

Crash in [@ mozilla::dom::NotificationsCallback::~NotificationsCallback]

Categories

(Core :: DOM: Notifications, defect, P3)

defect

Tracking

()

RESOLVED FIXED
138 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox136 --- unaffected
firefox137 --- unaffected
firefox138 + fixed

People

(Reporter: aryx, Assigned: saschanaz)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

7 crashes from 2 installs on Windows 11, latest Nightly build (138.0a1 20250305094745).

Crash report: https://crash-stats.mozilla.org/report/index/1e69a3a3-dd66-4746-bbf0-03e280250305

MOZ_CRASH Reason:

MozPromise::ThenValue created from 'RecvGetNotifications' destroyed without being either disconnected, resolved, or rejected (dispatchRv: not dispatched)

Top 10 frames:

0  xul.dll  MOZ_Crash(char const*, int, char const*)  mfbt/Assertions.h:382
0  xul.dll  mozilla::MozPromise<ProcessInfo, nsresult, 0>::ThenValueBase::AssertIsDead()  xpcom/threads/MozPromise.h:527
1  xul.dll  mozilla::MozPromise<long long, nsresult, 0>::AssertIsDead()  xpcom/threads/MozPromise.h:1253
2  xul.dll  mozilla::MozPromise<long long, nsresult, 0>::AssertIsDead()  xpcom/threads/MozPromise.h:1256
3  xul.dll  mozilla::MozPromise<CopyableTArray<mozilla::dom::IPCNotification>, nsresult, ...  xpcom/threads/MozPromise.h:1301
4  xul.dll  mozilla::MozPromise<CopyableTArray<mozilla::dom::IPCNotification>, nsresult, ...  xpcom/threads/MozPromise.h:1299
5  xul.dll  mozilla::MozPromiseRefcountable::Release()  xpcom/threads/MozPromise.h:152
5  xul.dll  mozilla::RefPtrTraits<mozilla::MozPromise<CopyableTArray<mozilla::dom::IPCNot...  mfbt/RefPtr.h:49
5  xul.dll  RefPtr<mozilla::MozPromise<CopyableTArray<mozilla::dom::IPCNotification>, nsr...  mfbt/RefPtr.h:409
5  xul.dll  RefPtr<mozilla::MozPromise<CopyableTArray<mozilla::dom::IPCNotification>, nsr...  mfbt/RefPtr.h:80
Flags: needinfo?(krosylight)

The callback may never be called if the parent process shuts down before getting the async result.

Another reason why bug 1937194 is wanted.

Assignee: nobody → krosylight
Status: NEW → ASSIGNED
Pushed by krosylight@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f3d36f83998f Clean up MozPromiseHolder when shutting down r=asuth
Flags: needinfo?(krosylight)
Severity: -- → S3
Priority: -- → P3
Status: ASSIGNED → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: