Bug 1951956 - Clean up MozPromiseHolder when shutting down r=asuth

The callback may never be called if the parent process shuts down before getting the async result.

Another reason why bug 1937194 is wanted.

Differential Revision: https://phabricator.services.mozilla.com/D240497